# Opengl-testingground

./: CMakeLists.txt  README.md
dependencies/include/glad/: glad.h
src/: Camera.h  Mesh.h  Model.h  Terrain.h  main.cpp
src/glad/: glad.c
src/shader/: fragment.fs  lightVertex.vs  model.fs  vertex.vs
